# AsterYggdrasil

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh.md  SECURITY.md  build.rs  config.example.toml  docker-compose.yml  init.sh
.cargo/: audit.toml
.gcop/: config.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
api-docs-macros/: Cargo.toml
developer-docs/: README.md
docs/: .gitignore  index.md
frontend-panel/: .gitignore  biome.json  index.html  package.json  vite.config.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20260606_000001_foundation_schema.rs  m20260618_000001_auth_email_registration_and_invitations.rs  m20260618_000002_add_user_must_change_password.rs  m20260618_000004_texture_library_metadata.rs  m20260618_000005_operator_scopes.rs  m20260620_000001_yggdrasil_session_forward_servers.rs  time.rs
scripts/: coverage-summary.mjs
src/: errors.rs  lib.rs  main.rs  metrics_core.rs
tests/: generate_openapi.rs  test_admin_external_auth.rs  test_admin_tasks.rs  test_admin_yggdrasil_forward.rs  test_audit.rs  test_auth.rs  test_cache.rs  test_config.rs  test_cors.rs  test_database_backends.rs  test_errors.rs  test_examples.rs  test_external_auth.rs  test_health.rs  test_middleware.rs  test_oauth2.rs  test_oidc.rs  test_public.rs  test_system.rs  test_user_invitations.rs  test_yggdrasil.rs
(+548 files in other folders)
